Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/Promocion_Agregada__c.object-meta.xml
<CustomObject>
    <label>Promoción Agregada</label>
    <nameField>
        <label>Nombre de Promoción Agregada</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promociones Agregadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>