Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/CI_Metros_Terreno__c.field-meta.xml
<CustomField>
    <fullName>CI_Metros_Terreno__c</fullName>
    <label>Mts. Construcción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>