Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/Codigo_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Empresa__c</fullName>
    <label>Código Empresa</label>
    <length>5</length>
    <type>Text</type>
</CustomField>