Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/Codigo_Promocion__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Promocion__c</fullName>
    <label>Código Promoción</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>