Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etapa</label>
    <referenceTo>Urbanizacion__c</referenceTo>
    <relationshipLabel>Promociones Agregadas</relationshipLabel>
    <relationshipName>Promociones_Agregadas</relationshipName>
    <type>Lookup</type>
</CustomField>