Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modelo</label>
    <referenceTo>Modelo__c</referenceTo>
    <relationshipLabel>Promociones Agregadas</relationshipLabel>
    <relationshipName>Promociones_Agregadas</relationshipName>
    <type>Lookup</type>
</CustomField>