Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/Promocion__c.field-meta.xml
<CustomField>
    <fullName>Promocion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoción</label>
    <referenceTo>Promocion__c</referenceTo>
    <relationshipLabel>Promociones Agregadas</relationshipLabel>
    <relationshipName>Promociones_Agregadas</relationshipName>
    <type>Lookup</type>
</CustomField>