Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/Secuencial__c.field-meta.xml
<CustomField>
    <fullName>Secuencial__c</fullName>
    <label>Secuencial</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>