Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>