Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/Vigencia_Fin__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Fin__c</fullName>
    <label>Vigencia Fin</label>
    <type>Date</type>
</CustomField>