Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/fields/Vigencia_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Vigencia_Inicio__c</fullName>
    <label>Vigencia Inicio</label>
    <type>Date</type>
</CustomField>