Inmob-Salesforce/force-app/main/default/objects/Promocion_Agregada__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo_Etapa__c</columns>
    <columns>Codigo_Promocion__c</columns>
    <columns>Nivel__c</columns>
    <columns>Modelo__c</columns>
    <columns>Vigencia_Inicio__c</columns>
    <columns>Vigencia_Fin__c</columns>
    <columns>Valor__c</columns>
    <columns>Secuencial__c</columns>
    <columns>Codigo_Proyecto__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Codigo_Promocion__c</field>
        <operation>equals</operation>
        <value>82</value>
    </filters>
    <label>Todos</label>
</ListView>